Ajuestes y mejoras simples de ultimo momento